Fix labels with X wrapping -Card #414

--- a/root/webapp/app/styles/patientview/sass/_utils.scss
+++ b/root/webapp/app/styles/patientview/sass/_utils.scss
@@ -62,6 +62,10 @@
     width:100%;
 }
 
+.no-pad-top{
+    margin-top:0!important;
+}
+
 ul.unstyled,
 ol.unstyled {
     margin-left: 0;
